--- a/src/styles/components/_main-layout.components.scss
+++ b/src/styles/components/_main-layout.components.scss
@@ -11,9 +11,8 @@
       align-items: center;
       gap: 8px;
       font-weight: 400;
+      color: white;
+      text-decoration: none;
     }
-  }
-  &__main {
-    width: 100%;
   }
 }
