--- a/src/styles/components/_character-card.components.scss
+++ b/src/styles/components/_character-card.components.scss
@@ -3,6 +3,12 @@
   color: white;
   cursor: pointer;
   text-decoration: none;
+  &:hover &__name-container::before {
+    top: 0; /* Mueve la capa de fondo rojo hacia abajo al hacer hover en el contenedor grande */
+  }
+  &:hover &__name-container__fav-button > svg > path {
+    fill: white;
+  }
   &__image-container {
     width: 100%;
     background-color: gray;
@@ -17,27 +23,41 @@
     }
   }
   &__name-container {
+    position: relative;
+    height: 56px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 15px 20px 15px;
+    padding: 0 15px;
     background-color: black;
     clip-path: polygon(0 0, 100% 0%, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%);
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: -100%;
+      left: 0;
+      background-color: red;
+      transition: top .3s ease;
+      z-index: 1;
+    }
     &__name {
       font-size: 12px;
       margin: 0;
       padding: 0;
       text-transform: uppercase;
       font-weight: 400;
+      z-index: 2;
     }
-    &__fav {
-      width: 12px;
+    &__fav-button {
+      z-index: 2;
+      & > svg {
+        width: 12px;
+        & > path {
+          transition: .3s;
+        }
+      }
     }
-  }
-  &__bottom {
-    background-color: black;
-    width: 100%;
-    height: 10px;
-    clip-path: polygon(0% 0%, 100% 0, calc(100% - 10px) 100%, 0 100%);
   }
 }
