--- a/src/styles/components/_character-details.components.scss
+++ b/src/styles/components/_character-details.components.scss
@@ -35,6 +35,10 @@
             font-size: 40px;
             margin: 0;
           }
+          &__fav-button > img {
+            width: 24px;
+            height: 24px;
+          }
         }
         &__description {
           font-size: 16px;
