--- a/src/styles/components/_comics-slider.components.scss
+++ b/src/styles/components/_comics-slider.components.scss
@@ -1,11 +1,29 @@
 .c-comics-slider {
   width: 63.5%;
-  margin-top: 20px;
+  padding: 40px 0;
   &__title {
     text-transform: uppercase;
     font-size: 32px;
+    margin-top: 0;
   }
   &__comics-container {
     gap: 10px;
+    display: flex;
+    overflow-x: scroll;
+    width: 100%;
+    cursor: grab;
+    user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    &::-webkit-scrollbar {
+      background-color: #D9D9D9;
+      height: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #EC1D24;
+    }
+    &.grabbing {
+      cursor: grabbing;
+    }
   }
 }
