--- a/src/styles/imports/components.imports.scss
+++ b/src/styles/imports/components.imports.scss
@@ -1,7 +1,9 @@
 @import "../components/main-layout.components";
 @import "../components/character-card.components";
+@import "../components/fav-button.components";
 @import "../components/searcher.components";
 @import "../components/characters-list-layout.components";
 @import "../components/character-details.components";
 @import "../components/comics-slider.components";
 @import "../components/comic.components";
+@import "../components/loader.components";
