--- a/src/styles/components/_main-layout.components.scss
+++ b/src/styles/components/_main-layout.components.scss
@@ -1,6 +1,6 @@
 .c-main-layout {
   &__header {
-    background-color: black;
+    background-color: $MARVEL_BLACK;
     display: flex;
     align-items: center;
     justify-content: space-between;
