--- a/src/styles/components/_character-details.components.scss
+++ b/src/styles/components/_character-details.components.scss
@@ -1,10 +1,22 @@
+@keyframes fadeInLittle {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .c-character-details {
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeInLittle 1s;
   &__character {
     width: 100%;
-    background-color: black;
+    background-color: $MARVEL_BLACK;
     color: white;
     border-top: 1px solid #333333;
     clip-path: polygon(0 0, 100% 0%, 100% calc(100% - 25px), calc(100% - 25px) 100%, 0 100%);
@@ -14,11 +26,20 @@
       width: 63.5%;
       display: flex;
       justify-content: space-between;
-      gap: 40px;
+      @media screen and (max-width:1200px) {
+        width: 100%;
+      }
+      @media screen and (max-width:550px) {
+        flex-direction: column;
+        align-items: center;
+      }
       &__image-container {
         width: 320px;
+        @media screen and (max-width:550px) {
+          width: 100%;
+        }
         &__image {
-          width: 320px;
+          width: 100%;
           height: 100%;
         }
       }
@@ -27,6 +48,11 @@
         flex-direction: column;
         justify-content: center;
         width: calc(100% - 320px);
+        padding: 0 40px;
+        @media screen and (max-width:550px) {
+          width: calc(100% - 30px);
+          padding: 20px 0;
+        }
         &__title {
           display: flex;
           justify-content: space-between;
@@ -34,6 +60,9 @@
             text-transform: uppercase;
             font-size: 40px;
             margin: 0;
+            @media screen and (max-width:1200px) {
+              font-size: 32px;
+            }
           }
           &__fav-button > img {
             width: 24px;
@@ -41,6 +70,7 @@
           }
         }
         &__description {
+          margin-top: 20px;
           font-size: 16px;
         }
       }
