--- a/src/styles/components/_loader.components.scss
+++ b/src/styles/components/_loader.components.scss
@@ -5,9 +5,9 @@
 
 .c-loader {
   width: 100%;
-  height: 5px; /* Altura de la línea del loader */
-  background-color: #f00; /* Color de la línea (rojo en este caso) */
-  z-index: 1000; /* Asegura que esté encima de todo */
-  transition: width .1s ease-out; /* Transición suave para el avance */
+  height: 5px;
+  background-color: $MARVEL_RED;
+  z-index: 1000;
+  transition: width .1s ease-out;
   animation: load .5s linear forwards;
 }
