--- a/src/styles/components/_searcher.components.scss
+++ b/src/styles/components/_searcher.components.scss
@@ -1,5 +1,5 @@
 .c-searcher {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $MARVEL_BLACK;
   padding-bottom: 7px;
   display: flex;
   align-items: center;
@@ -13,6 +13,9 @@
     font-size: 16px;
     &::placeholder {
       color: #AAAAAA;
+    }
+    &:focus {
+      outline: none;
     }
   }
 }
