control de errores

--- a/src/frameworks/ui/styles/imports/components.imports.scss
+++ b/src/frameworks/ui/styles/imports/components.imports.scss
@@ -7,3 +7,4 @@
 @import "../components/comics-slider.components";
 @import "../components/comic.components";
 @import "../components/loader.components";
+@import "../components/error-message.components";
